fix: prevent svg overflowing

--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -27,6 +27,7 @@ th {
 }
 
 // Avoid overflow
+svg,
 img,
 video,
 iframe {
